--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 {% block content %}
 <h1>Investitionsprojekte</h1>
 <p>
-    Mittels untenstehenden Buttons kannst du ein Antrag für ein neues Investitionsprojekt erstellen oder zur Übersicht navigieren.<br><br>
-    <a class="btn btn-primary btn-lg" href="{{ url_for('formular') }}" role="button" type="submit">Investitionsprojekt beantragen</a>
+    Mittels untenstehenden Buttons kannst du ein neues Investitionsprojekt erfassen oder zur Übersicht navigieren.<br><br>
+    <a class="btn btn-primary btn-lg" href="{{ url_for('formular') }}" role="button" type="submit">Investitionsprojekt erfassen</a>
     <a class="btn btn-primary btn-lg" href="{{ url_for('overview') }}" role="button" type="submit">Übersicht aller Investitionsprojekte</a><br><br>
 </p>
 
