--- a/templates/base.html
+++ b/templates/base.html
@@ -2,40 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- For responsive behavior in mobile devices */ -->
+    <!-- Für responsives Verhalten von mobile devices */ -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
-    <!--/* Including Bootstrap CSS */-->
+    <!--/* Bootstrap CSS hinzufügen*/-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
-    <nav class="navbar navbar-expand-lg bg-light">
-      <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="{{ url_for('start')}}">Home</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('overview')}}">Übersicht</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('analysis')}}">Auswertung</a>
-              </li>
-          </ul>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{ url_for('start')}}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('overview')}}">Übersicht</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('analysis')}}">Auswertung</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
-
+    <!-- Quelle: https://getbootstrap.com/docs/4.0/components/navbar/-->
 </head>
-<body>
+<body class="bg-light">
     <div class="p-5">
         {% block content %}
         {% endblock %}
     </div>
-    <!--/* Including Bootstrap JS */-->
+    <!--/* Bootstrap JS hinzufügen*/-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
